--- a/main.css
+++ b/main.css
@@ -1,13 +1,44 @@
+*{
+	overflow: visible;
+}
+
 body {
 	background-color: white;
+	margin: 0;
 }
 textarea{
 	font-size: 12px;
+	padding: 10px;
+	height: auto;
+	width: auto;
+}
+
+button{
 	font-family: cursive;
+	background-color: white;
+	border-color:gray;
 	border-radius: 10px;
-	padding: 15px;
-	height: 100px;
-	width: 400px;
+	border-style: solid;
+	padding: 10px;
+}
+
+button: hover{
+	background-color: gray;
+	border-color:white;
+	border-radius: 10px;
+	border-style: solid;
+	padding: 10px;
+}
+
+.profile-img{
+	border-radius: 50%;
+}
+
+
+.img{
+	width: 200px;
+	max-width: 100%;
+    height: 100px;
 }
 
 .border-none{
@@ -30,58 +61,188 @@ textarea{
 	color: gray;
 }
 
-.post:hover{
-	padding: 10px;
-	background-color: gray;
-	color: white;
-	border-color:gray;
-	border-radius: 10px;
-	border-style: solid;
-	border-color: white;
-	height: 20%;
-	width: 50%;
-}
-
 .body{
 	display: grid;
 	grid-template-columns: auto;
 	grid-gap: 10px;
 }
 
-.container{
-	padding: 10px;
+.theme-noborder{
+	background-color: white;
+	padding: 5px;
+	font-family: cursive;
+}
+
+div.inline{
+	float: right;
+}
+
+.clear {
+	clear: both;
+}
+
+.theme{
 	background-color: white;
 	border-color:gray;
 	border-radius: 10px;
 	border-style: solid;
-	height: 20%;
-	width: 50%;
+	padding: 10px;
+	font-family: cursive;
+}
+
+.container{
+	height: 50%;
+	width: 45%;
 
 }
 .contain{
-
-	margin: auto;
+	overflow-wrap: break-word;
 	align-content: center;
-	padding: 10px;
-	background-color: white;
-
-	border-color:gray;
-	border-radius: 10px;
-	border-style: solid;
-	height: auto;
-	width: 500px;
-
-}
-.content{
-	align-content: center;
-	padding: 5px;
-	background-color: white;
-
-	border-color:gray;
-	border-radius: 10px;
-	border-style: solid;
-	border-width: 1px;
 	height: auto;
 	width: auto;
 
+}
+.content{
+	height: auto;
+	width: auto;
+
+}
+
+/*header*/
+
+.right {
+    right: 0px;
+    width: 300px;
+    padding: 10px;
+}
+.left {
+   	left: 0px;
+    width: 50%;
+    height: 50%;
+    padding: 10px;
+}
+
+.card {
+    /* Add shadows to create the "card" effect */
+    padding: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+
+.column {
+	float: left;
+    width: 50%;
+    padding: 10px;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: right;
+}
+
+li a {
+	position: relative;
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-family: cursive;
+    font-size: 15px;
+}
+
+li a:hover {
+    background-color: #111;
+    border-radius: 10px;
+}
+
+
+/* Navbar container */
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  font-family: cursive;
+}
+
+/* Links inside the navbar */
+.navbar a {
+  float: right;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* The dropdown container */
+.dropdown {
+  float: right;
+  overflow: hidden;
+}
+
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 16px; 
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+}
+
+/* Add a red background color to navbar links on hover */
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: white;
+  border-radius: 10px;
+  color: black;
+}
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
 }
