--- a/main.css
+++ b/main.css
@@ -2,18 +2,21 @@
 	overflow: visible;
 }
 
+
 body {
 	background-color: white;
-	margin: 0;
+	width: 100%; 
+	margin: 0 auto; 
 }
 textarea{
 	font-size: 12px;
 	padding: 10px;
 	height: auto;
-	width: auto;
+	width: 100%;
 }
 
 button{
+	cursor:pointer;
 	font-family: cursive;
 	background-color: white;
 	border-color:gray;
@@ -22,130 +25,19 @@ button{
 	padding: 10px;
 }
 
-button: hover{
+button:hover{
+	cursor:pointer;
+	color: white;
+	font-family: cursive;
 	background-color: gray;
 	border-color:white;
-	border-radius: 10px;
-	border-style: solid;
-	padding: 10px;
 }
 
-.profile-img{
-	border-radius: 50%;
+h4{
+	color: black;
 }
 
 
-.img{
-	width: 200px;
-	max-width: 100%;
-    height: 100px;
-}
-
-.border-none{
-	border:none;
-}
-
-.header{
-	font-family: cursive;
-	background-color: gray;
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
-	height: 100px;
-	width: auto;
-}
-
-
-.post{
-	font-family: cursive; 
-	font-size: 24px; 
-	color: gray;
-}
-
-.body{
-	display: grid;
-	grid-template-columns: auto;
-	grid-gap: 10px;
-}
-
-.theme-noborder{
-	background-color: white;
-	padding: 5px;
-	font-family: cursive;
-}
-
-div.inline{
-	float: right;
-}
-
-.clear {
-	clear: both;
-}
-
-.theme{
-	background-color: white;
-	border-color:gray;
-	border-radius: 10px;
-	border-style: solid;
-	padding: 10px;
-	font-family: cursive;
-}
-
-.container{
-	height: 50%;
-	width: 45%;
-
-}
-.contain{
-	overflow-wrap: break-word;
-	align-content: center;
-	height: auto;
-	width: auto;
-
-}
-.content{
-	height: auto;
-	width: auto;
-
-}
-
-/*header*/
-
-.right {
-    right: 0px;
-    width: 300px;
-    padding: 10px;
-}
-.left {
-   	left: 0px;
-    width: 50%;
-    height: 50%;
-    padding: 10px;
-}
-
-.card {
-    /* Add shadows to create the "card" effect */
-    padding: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-}
-
-/* On mouse-over, add a deeper shadow */
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-
-.column {
-	float: left;
-    width: 50%;
-    padding: 10px;
-}
-
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
 
 ul {
     list-style-type: none;
@@ -177,12 +69,185 @@ li a:hover {
     border-radius: 10px;
 }
 
+a:link {
+    text-decoration: none;
+}
 
-/* Navbar container */
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+    color: gray;
+}
+
+a:active {
+    text-decoration: underline;
+    color: gray;
+}
+.font-sm{
+	font-size: 12px;
+}
+
+.font-md{
+	font-size: 14px;
+}
+
+.black{
+	color: black;
+}
+
+.wrapper{   
+  white-space: pre-line;
+}
+
+
+.button{
+	cursor:pointer;
+}
+
+.relative{
+	position: relative;
+}
+
+.topcorner{
+	padding: 5px;
+   position:absolute;
+   top:0px;
+   right:0px;
+  }
+
+.panel{
+	max-width: 100%;
+    margin-left: 40px;
+    margin-right: 0px;
+
+}
+
+.round-border{
+	border-radius: 10px;
+}
+
+.profile-img{
+	border-radius: 50%;
+}
+
+
+.img{
+	width: 200px;
+	max-width: 100%;
+    height: 100px;
+}
+
+.img-tr{
+	width: 150px;
+	max-width: 100%;
+    height: 70px;
+}
+
+.img:hover{
+	opacity: 1;
+	transform: scale(4);
+}
+
+.border-none{
+	border:none;
+}
+
+.header{
+	font-family: cursive;
+	background-color: gray;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	height: 100px;
+	width: auto;
+}
+
+
+.post{
+	font-family: cursive; 
+	font-size: 24px; 
+	color: gray;
+}
+
+.body{
+	display: block;
+	grid-template-columns: auto;
+	grid-gap: 10px;
+}
+
+.theme-noborder{
+	background-color: white;
+	padding: 5px;
+	font-family: cursive;
+}
+.clear {
+	clear: both;
+}
+
+.theme{
+	background-color: white;
+	border-color:gray;
+	border-radius: 10px;
+	border-style: solid;
+	padding: 10px;
+	font-family: cursive;
+}
+.right {
+    right: 0px;
+    width: 300px;
+    padding: 10px;
+}
+.left {
+   	left: 0px;
+    width: 50%;
+    height: 50%;
+    padding: 10px;
+}
+
+.card {
+    padding: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 59%;
+}
+
+.col-md{
+	float: left;
+    width: 33.33%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
+@media (max-width: 600px) {
+    .column {
+        width: 100%;
+    }
+}
+
+/*
+ Navbar container */
 .navbar {
   overflow: hidden;
   background-color: #333;
   font-family: cursive;
+
 }
 
 /* Links inside the navbar */
@@ -193,6 +258,7 @@ li a:hover {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  margin-right: 30px; 
 }
 
 /* The dropdown container */
@@ -246,3 +312,8 @@ li a:hover {
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+.literally {
+  width: 100%;
+}
+
