--- a/css/profile.css
+++ b/css/profile.css
@@ -1,141 +1,130 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin-bottom: 100px;
+
+hr {
+    border: solid;
+    border-width: 1px;
+    border-color: #0B86C3;
 }
 
-h1 {
-    display: block;
-    font-size: 50px;
-    margin: 25px auto 0;
-    width: 975px;
+.info_icon {
+    color: #0B86C3;
+    font-size: 18px;
+    padding: 3px;
 }
 
-h1>small {
-    color: #aaaaaa;
-    font-size: .5em;
+
+#user_header {
+    width: 70rem;
+    height: 100px;
+    margin: auto;
+    padding: 10px;
+    background: #222 url('https://subtlepatterns.com/patterns/use_your_illusion.png') repeat;
+    padding: 10px;
 }
 
-header {
-    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
-    margin: 25px auto 50px;
-    height: 300px;
-    position: relative;
-    width: 975px;
-}
-
-figure.profile-banner {
-    left: 0;
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    z-index: 1;
-}
-
-figure.profile-picture {
-    background-position: center center;
-    background-size: cover;
-    border: 5px #efefef solid;
-    border-radius: 50%;
-    bottom: -50px;
-    box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.2), 1px 1px 4px rgba(0, 0, 0, 0.3);
-    height: 148px;
-    left: 150px;
-    position: absolute;
-    width: 148px;
-    z-index: 3;
-}
-
-div.profile-stats {
-    bottom: 0;
-    border-top: 1px solid rgba(0, 0, 0, 0.5);
-    left: 0;
-    padding: 15px 15px 15px 350px;
-    position: absolute;
-    right: 0;
-    z-index: 2;
-    /* Generated Gradient */
-    background: -moz-linear-gradient(top, rgba(255, 255, 255, 0.5) 0%, rgba(0, 0, 0, 0.51) 3%, rgba(0, 0, 0, 0.75) 61%, rgba(0, 0, 0, 0.5) 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0.5)), color-stop(3%, rgba(0, 0, 0, 0.51)), color-stop(61%, rgba(0, 0, 0, 0.75)), color-stop(100%, rgba(0, 0, 0, 0.5)));
-    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.5) 0%, rgba(0, 0, 0, 0.51) 3%, rgba(0, 0, 0, 0.75) 61%, rgba(0, 0, 0, 0.5) 100%);
-    background: -o-linear-gradient(top, rgba(255, 255, 255, 0.5) 0%, rgba(0, 0, 0, 0.51) 3%, rgba(0, 0, 0, 0.75) 61%, rgba(0, 0, 0, 0.5) 100%);
-    background: -ms-linear-gradient(top, rgba(255, 255, 255, 0.5) 0%, rgba(0, 0, 0, 0.51) 3%, rgba(0, 0, 0, 0.75) 61%, rgba(0, 0, 0, 0.5) 100%);
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5) 0%, rgba(0, 0, 0, 0.51) 3%, rgba(0, 0, 0, 0.75) 61%, rgba(0, 0, 0, 0.5) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80ffffff', endColorstr='#80000000', GradientType=0);
-}
-
-div.profile-stats ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-div.profile-stats ul li {
-    color: #efefef;
-    display: block;
+#user {
+    width: 700px;
+    height: 100px;
     float: left;
-    font-size: 24px;
-    font-weight: bold;
-    margin-right: 50px;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7)
 }
 
-div.profile-stats li span {
-    display: block;
-    font-size: 16px;
-    font-weight: normal;
+#user_picture {
+    float: left;
+    padding-right: 20px;
 }
 
-div.profile-stats a.follow {
-    display: block;
-    float: right;
-    color: #ffffff;
-    margin-top: 5px;
-    text-decoration: none;
-    /* This is a copy and paste from Bootstrap */
-    background-color: #49afcd;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-    background-color: #49afcd;
-    background-image: -moz-linear-gradient(top, #5bc0de, #2f96b4);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5bc0de), to(#2f96b4));
-    background-image: -webkit-linear-gradient(top, #5bc0de, #2f96b4);
-    background-image: -o-linear-gradient(top, #5bc0de, #2f96b4);
-    background-image: linear-gradient(to bottom, #5bc0de, #2f96b4);
-    background-repeat: repeat-x;
-    border-color: #2f96b4 #2f96b4 #1f6377;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5bc0de', endColorstr='#ff2f96b4', GradientType=0);
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-    display: inline-block;
-    padding: 4px 12px;
-    margin-bottom: 0;
+#user_info {
+    width: 70rem;
+    height: 90px;
+    background-color: rgba(60, 60, 60, 0.4);
+    padding-top: 10px;
+}
+
+.user_name {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    margin: 0;
+    color: #fff;
+    letter-spacing: 1.75px;
+}
+
+.verified {
+    color: #0B86C3;
+}
+
+#user_info ul {
+    padding: 0;
+    list-style-type: none;
+    margin: 0;
+}
+
+#user_list {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 200;
     font-size: 14px;
-    line-height: 20px;
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-    border-radius: 4px;
+    color: #fff;
 }
 
-div.profile-stats a.follow.followed {
-    /* Once again copied from Boostrap */
-    color: #ffffff;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-    background-color: #5bb75b;
-    background-image: -moz-linear-gradient(top, #62c462, #51a351);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#62c462), to(#51a351));
-    background-image: -webkit-linear-gradient(top, #62c462, #51a351);
-    background-image: -o-linear-gradient(top, #62c462, #51a351);
-    background-image: linear-gradient(to bottom, #62c462, #51a351);
-    background-repeat: repeat-x;
-    border-color: #51a351 #51a351 #387038;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff62c462', endColorstr='#ff51a351', GradientType=0);
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+#user_list li {
+    display: inline;
+    margin-right: 20px;
+    letter-spacing: 1px;
 }
 
-header>h1 {
-    bottom: -50px;
-    color: #354B63;
-    font-size: 40px;
-    left: 350px;
-    position: absolute;
-    z-index: 5;
+#scorebox {
+    background: #222 url('https://subtlepatterns.com/patterns/use_your_illusion.png') repeat;
+    width: 200px;
+    height: 65px;
+    padding: 8px;
+    box-shadow: 2px 2px 20px #222;
+    float: right;
+    margin-top: 9px;
+    margin-right: 5px;
 }
+
+#score {
+    background-color: rgba(60, 60, 60, 0.4);
+    width: 135px;
+    height: 65px;
+    float: left;
+}
+
+.score {
+    font-family: 'Exo', sans-serif;
+    font-weight: 700;
+    color: #fff;
+    font-size: 36px;
+    margin: 9px 20%;
+    display: block;
+    letter-spacing: 5px;
+    text-shadow: 3px 3px 5px #000;
+}
+
+.score:hover {
+    color: #0B86C3;
+    text-shadow: 3px 3px 20px #000;
+}
+
+#points {
+    width: 42px;
+    height: 45px;
+    padding: 10px;
+    margin-left: 3px;
+    background: #0B86C3;
+    float: right;
+    color: #fff;
+}
+
+#points:hover {
+    background: #005782;
+}
+
+.pts {
+    font-family: 'Exo', sans-serif;
+    font-weight: 700;
+    color: #fff;
+    font-size: 12px;
+    letter-spacing: 1px;
+    margin-top: 20px;
+    display: block;
+}
+
