--- a/css/editaccount.css
+++ b/css/editaccount.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    font-family: 'Nunito', sans-serif;
+    font-family: cursive;
     color: #384047;
 }
 
@@ -61,18 +61,7 @@ select {
 }
 
 button {
-    padding: 19px 39px 18px 39px;
-    color: #FFF;
-    background-color: #4bc970;
-    font-size: 18px;
-    text-align: center;
-    font-style: normal;
-    border-radius: 5px;
-    width: 100%;
-    border: 1px solid #3ac162;
-    border-width: 1px 1px 3px;
-    box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.1) inset;
-    margin-bottom: 10px;
+    width: 50%; height: 50px; margin-left: 25%;
 }
 
 fieldset {
@@ -96,7 +85,7 @@ label.light {
 }
 
 .number {
-    background-color: #5fcf80;
+    background-color: gray;
     color: #fff;
     height: 30px;
     width: 30px;
