--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,8 @@ button{
 	cursor:pointer;
 	font-family: cursive;
 	background-color: white;
-	border-color:gray;
+  color: #9bf281;
+	border-color:#61f635;
 	border-radius: 10px;
 	border-style: solid;
 	padding: 10px;
@@ -36,12 +37,12 @@ button:hover{
 	cursor:pointer;
 	color: white;
 	font-family: cursive;
-	background-color: gray;
+	background-color:#9bf281 ;
 	border-color:white;
 }
 
 h4{
-	color: black;
+	color: #9bf281;
 }
 
 
@@ -73,7 +74,6 @@ li a {
 
 li a:hover {
     background-color: #111;
-    border-radius: 10px;
 }
 
 a:link {
@@ -107,9 +107,6 @@ a:active {
   color: gray;
 }
 
-.black{
-	color: black;
-}
 
 .wrapper{   
   white-space: pre-line;
@@ -138,33 +135,27 @@ a:active {
 
 }
 
-.round-border{
-	border-radius: 10px;
-}
-
 .profile-img{
 	border-radius: 50%;
 }
 
 
 .img{
-	width: 200px;
-	max-width: 100%;
-    height: 100px;
+	 width: 100%;
+   height: 300px;
     transition: width 2s, height 4s;
 }
 
 .img-tr{
-	width: 150px;
+	width: 140px;
 	max-width: 100%;
     height: 70px;
 }
-
-.img:hover{
-
-    width: 600px;
-    height: 300px;
+.img-tr:hover{
+  cursor: pointer; 
+  opacity: 0.7;
 }
+
 
 .border-none{
 	border:none;
@@ -196,7 +187,6 @@ a:active {
 
 .theme-noborder{
 	background-color: white;
-	padding: 5px;
 	font-family: cursive;
 }
 .clear {
@@ -205,8 +195,7 @@ a:active {
 
 .theme{
 	background-color: white;
-	border-color:gray;
-	border-radius: 10px;
+	border-color:#9bf281;
 	border-style: solid;
 	padding: 10px;
 	font-family: cursive;
@@ -224,8 +213,8 @@ a:active {
 }
 
 .card {
-    padding: 10px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    padding: 5px;
     transition: 0.3s;
 }
 
@@ -262,7 +251,7 @@ a:active {
  Navbar container */
 .navbar {
   overflow: hidden;
-  background-color: #333;
+  background-color: #1ff02d;
   font-family: cursive;
 
 }
@@ -293,16 +282,14 @@ a:active {
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: white;
-  border-radius: 10px;
-  color: black;
+  color: white;
 }
 
 
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: white;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -310,7 +297,8 @@ a:active {
 
 .dropdown-content a {
   float: none;
-  color: black;
+  color: #9bf281;
+  width: 100%;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -318,7 +306,7 @@ a:active {
 }
 
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: #9bf281;
 }
 
 .dropdown:hover .dropdown-content {
