--- a/css/register.css
+++ b/css/register.css
@@ -8,14 +8,13 @@
 
 body {
     font-family: cursive;
-    color: #384047;
+    color: #9bf281;
 }
 
 form {
     margin: 10px auto;
     padding: 10px 20px;
     background: #f4f7f8;
-    border-radius: 8px;
 }
 
 h1 {
@@ -45,7 +44,7 @@ select {
     padding: 15px;
     width: 100%;
     background-color: #e8eeef;
-    color: #8a97a0;
+    color: #9bf281;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
     margin-bottom: 30px;
 }
@@ -87,7 +86,7 @@ label.light {
 }
 
 .number {
-    background-color: gray;
+    background-color: #9bf281;
     color: #fff;
     height: 30px;
     width: 30px;
