--- a/css/editaccount.css
+++ b/css/editaccount.css
@@ -8,13 +8,13 @@
 
 body {
     font-family: cursive;
-    color: #384047;
+    color: white;
 }
 
 form {
     margin: 10px auto;
     padding: 10px 20px;
-    background: #f4f7f8;
+    background: #9bf281;
     border-radius: 8px;
 }
 
@@ -43,8 +43,8 @@ select {
     outline: 0;
     padding: 15px;
     width: 100%;
-    background-color: #e8eeef;
-    color: #8a97a0;
+    background-color: white;
+    color: #9bf281;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
     margin-bottom: 30px;
 }
@@ -85,8 +85,8 @@ label.light {
 }
 
 .number {
-    background-color: gray;
-    color: #fff;
+    background-color: white;
+    color: #9bf281;
     height: 30px;
     width: 30px;
     display: inline-block;
