--- a/css/login.css
+++ b/css/login.css
@@ -14,7 +14,7 @@ body {
 .form-login {
     max-width: 30%;
     padding: 10px 20px;
-    background: black;
+    background: #9bf281;
     border-top-right-radius:10px; 
     border-bottom-right-radius:10px;
 }
@@ -23,7 +23,7 @@ body {
     margin-left: 40%;
     padding: 10px 20px;
     width: 60%;
-    background: black;
+    background: #9bf281;
     border-radius: 8px;
     border-top-left-radius:10px; 
     border-bottom-left-radius:10px;
@@ -38,6 +38,7 @@ input[type="text"],
 input[type="password"],
 input[type="date"],
 input[type="datetime"],
+input[type="datetime-local"],
 input[type="email"],
 input[type="number"],
 input[type="search"],
@@ -53,7 +54,7 @@ select {
     outline: 0;
     padding: 15px;
     width: 100%;
-    background-color: #e8eeef;
+    background-color: white;
     border-radius: 10px;
     color: #8a97a0;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
@@ -93,7 +94,7 @@ label.light {
 
 .number {
     background-color: white;
-    color: black;
+    color: #9bf281;
     height: 30px;
     width: 30px;
     display: inline-block;
