--- a/css/modals.css
+++ b/css/modals.css
@@ -1,6 +1,5 @@
 /* Style the Image Used to Trigger the Modal */
 #myImg {
-    border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
 }
@@ -19,7 +18,7 @@
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+    background-color: rgba(0,0,0,0.9); /* #9bf281 w/ opacity */
 }
 
 /* Modal Content (Image) */
