--- a/css/profile.css
+++ b/css/profile.css
@@ -1,7 +1,7 @@
 
 hr {
     border-width: 1px;
-    border-color: #0B86C3;
+    border-color: #9bf281;
 }
 
 .info_icon {
@@ -13,17 +13,14 @@ hr {
 
 
 #user_header {
-    width: 70rem;
+    max-width: 100%;
     height: 100px;
-    margin: auto;
-    padding: 10px;
-    border-radius: 20px;
+    padding:10px;
     background: #222 url('/moreimg/use_your_illusion.png') repeat;
-    padding: 10px;
 }
 
 #user {
-    width: 700px;
+    width: 100%;
     height: 100px;
     float: left;
 }
@@ -34,7 +31,7 @@ hr {
 }
 
 #user_info {
-    width: 70rem;
+    width: 100%;
     height: 90px;
     background-color: rgba(60, 60, 60, 0.4);
     padding-top: 10px;
