--- a/css/editaccount.css
+++ b/css/editaccount.css
@@ -60,7 +60,7 @@ select {
     border-radius: 2px;
 }
 
-button {
+button,input[type="button"],input[type="submit"] {
     width: 50%; height: 50px; margin-left: 25%;
 }
 
